--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       <div class="logo">
         <a href="">Ins Followers</a>
       </div>
+      <div class="hamburger-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
       <ul>
         <li><a href="">Home</a></li>
         <li><a href="">Store</a></li>
