Mengubah tampilan desktop

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <nav>
       <div class="logo">
-        <a href="">Ins Followers</a>
+        <a href=""><img src="img/Nav Logo/logo.svg" alt="">Ins Followers</a>
       </div>
       <div class="hamburger-menu">
         <span></span>
@@ -31,6 +31,39 @@
           <img src="img/banner_pic_pc.png" alt="" />
         </div>
         <div class="right">
+          <div class="colm">
+            <h1>Get <span>Free </span>Instagram Followers & Likes</h1>
+            <div class="desk">
+              <div>
+                <p><img src="img/ad_icon01.svg" alt="" />100% Free</p>
+                <p><img src="img/ad_icon02.svg" alt="" />Totally Authentic</p>
+                <p><img src="img/ad_icon03.svg" alt="" />Safe & Private</p>
+              </div>
+              <div>
+                <p>- Get unlimited free Instagram followers.</p>
+                <p>- 100% real IG followers are the guarantees.</p>
+                <p>- No virus, no leak.</p>
+              </div>
+            </div>
+            <a href="">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="25"
+                height="25"
+                fill="currentColor"
+                class="bi bi-person-fill-add"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0m-2-6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"
+                />
+                <path
+                  d="M2 13c0 1 1 1 1 1h5.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.544-3.393C9.077 9.038 8.564 9 8 9c-5 0-6 3-6 4"
+                />
+              </svg>
+              Get Free Followers</a
+            >
+          </div>
           <form name="submit-to-google-sheet">
             <h1>Instagram</h1>
             <div class="colm">
