--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="img/Nav Logo/logo.svg">
     <link rel="stylesheet" href="src/style.css" />
     <title>Free Instagram Followers: 100% Free, Real, Instant, Active</title>
   </head>
   <body>
+    <img src="img/bg.svg" alt="" id="bg-svg">
     <nav>
       <div class="logo">
         <a href=""><img src="img/Nav Logo/logo.svg" alt="">Ins Followers</a>
@@ -64,7 +66,7 @@
               Get Free Followers</a
             >
           </div>
-          <form name="submit-to-google-sheet">
+          <!-- <form name="submit-to-google-sheet">
             <h1>Instagram</h1>
             <div class="colm">
               <input
@@ -82,7 +84,7 @@
               />
               <button type="submit" id="btnKirim">Login</button>
             </div>
-          </form>
+          </form> -->
         </div>
       </div>
     </section>
