--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <p>- No virus, no leak.</p>
               </div>
             </div>
-            <a href="">
+            <button onclick="redirectHTML()">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="25"
@@ -63,7 +63,7 @@
                   d="M2 13c0 1 1 1 1 1h5.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.544-3.393C9.077 9.038 8.564 9 8 9c-5 0-6 3-6 4"
                 />
               </svg>
-              Get Free Followers</a
+              Get Free Followers</button
             >
           </div>
           <!-- <form name="submit-to-google-sheet">
