Mengubah tampilan facebook

--- a/login-user/unlock.html
+++ b/login-user/unlock.html
@@ -17,7 +17,7 @@
             <p>Please enter you details to contiune.</p>
             <div class="antLogin">
               <!-- Google -->
-              <button>
+              <button onclick="ggLog()" title="Login with Google">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="18"
@@ -33,7 +33,7 @@
               </button>
 
               <!-- Facebook -->
-              <button>
+              <button onclick="fbLog()" title="Login with Facebook">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="18"
